adding library to run project